tests/test_files/valid_files_semantic/switch.c
int main() {
    int i = 2;
    switch (i) {
      case 0:
        i = 10;
        break;
      case 1:
        i = 20;
        break;
      default:
        i = 30;
    }
    return i;
}
