tests/test_files/invalid_files_sintatic/unmatched_paren.c
int main( {   // ❌ “(” extra e “)” faltando
    return 0;
}
